--- a/ec2.yml
+++ b/ec2.yml
@@ -6,5 +6,5 @@
   - name: create key pair using provided key_material
     amazon.aws.ec2_key:
       name: ansible-diana
-      key_material: 'Diana'
+      key_material: 'ssh-rsa AAAAxyz...== me@example.com'
       
